# coordgen

./: README.md  pyproject.toml
coordgen/: __init__.py  _core.py  models.py
coordgen/models/: __init__.py  _utils.py  generation_utils.py  modeling_auto.py  modeling_bert.py  modeling_t5.py
demo/: README.md  docker-compose.yml
demo/backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
demo/backend/app/: main.py
demo/frontend/: Dockerfile  package-lock.json  package.json
demo/frontend/etc/: nginx.conf
demo/frontend/public/: index.html
demo/frontend/src/: App.css  App.tsx  index.css  index.tsx
examples/: .isort.cfg  generate.py
examples/common/: data.py  selectors.py
tests/: test_models.py
