[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "coordgen"
version = "0.1"
authors = [
    {name = "Hiroki Teranishi", email = "hiroki.teranishi@riken.jp"}
]
description = "Coordination Generation via Synchronized Text-Infilling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
  "torch",
  "transformers",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["coordgen"]

[tool.ruff]
select = ["E", "W", "F", "B"]
ignore = ["B905"]
line-length = 99

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
